[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fooocus"
version = "2.5.5"
description = "Fooocus - Focus on prompting and generating"
readme = "readme.md"
requires-python = ">=3.12,<3.13"
license = {text = "GPL-3.0-only"}
authors = [
    {name = "lllyasviel"},
]
keywords = ["stable diffusion", "ai", "image generation", "diffusion models"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: GPU :: NVIDIA CUDA :: 12 :: 12.8",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Graphics",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.urls]
"Homepage" = "https://github.com/lllyasviel/Fooocus"
"Bug Tracker" = "https://github.com/lllyasviel/Fooocus/issues"
"Documentation" = "https://github.com/lllyasviel/Fooocus/blob/main/readme.md"
"Source" = "https://github.com/lllyasviel/Fooocus"

[project.scripts]
fooocus = "launch:main"

[project.dependencies]
# Read from requirements file
# UV will handle these during sync

[tool.uv]
constraint-dependencies = ["requirements_rtx5090.txt"]

[[tool.uv.index]]
name = "pytorch-nightly"
url = "https://download.pytorch.org/whl/nightly/cu128"

[tool.uv.sources]
torch = {index = "pytorch-nightly"}
torchvision = {index = "pytorch-nightly"}
torchaudio = {index = "pytorch-nightly"}

[tool.setuptools]
packages = ["modules", "ldm_patched", "extras"]
include-package-data = true

[tool.setuptools.package-data]
"*" = ["*.json", "*.yaml", "*.txt", "*.csv", "*.mp3", "*.jpg", "*.png"]