[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fooocus"
version = "2.5.5"
description = "Fooocus - Focus on prompting and generating"
readme = "readme.md"
requires-python = ">=3.12,<3.13"
license = {text = "GPL-3.0-only"}
authors = [
    {name = "lllyasviel"},
]
keywords = ["stable diffusion", "ai", "image generation", "diffusion models"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: GPU :: NVIDIA CUDA :: 12 :: 12.8",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Graphics",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "torch==2.9.0.dev20250726+cu128",
    "torchvision==0.21.0.dev20250726+cu128", 
    "torchaudio==2.9.0.dev20250726+cu128",
    "nvidia-cuda-runtime-cu12>=12.8.0",
    "nvidia-cudnn-cu12>=9.5.0",
    "nvidia-cublas-cu12>=12.8.0",
    "nvidia-curand-cu12>=10.3.7",
    "nvidia-cusolver-cu12>=11.7.1",
    "nvidia-cusparse-cu12>=12.6.0",
    "nvidia-cufft-cu12>=11.3.0",
    "torchsde==0.2.6",
    "einops==0.8.0",
    "transformers==4.42.4",
    "safetensors==0.4.3",
    "accelerate==0.32.1",
    "pyyaml==6.0.1",
    "pillow==10.4.0",
    "scipy==1.14.0",
    "tqdm==4.66.4",
    "psutil==6.0.0",
    "pytorch_lightning==2.3.3",
    "omegaconf==2.3.0",
    "gradio==3.41.2",
    "pygit2==1.15.1",
    "opencv-contrib-python-headless==4.10.0.84",
    "httpx==0.27.0",
    "onnxruntime==1.18.1",
    "timm==1.0.7",
    "numpy==1.26.4",
    "tokenizers==0.19.1",
    "packaging==24.1",
    "rembg==2.0.57",
    "groundingdino-py==0.4.0",
    "segment_anything==1.0",
]

[project.urls]
"Homepage" = "https://github.com/lllyasviel/Fooocus"
"Bug Tracker" = "https://github.com/lllyasviel/Fooocus/issues"
"Documentation" = "https://github.com/lllyasviel/Fooocus/blob/main/readme.md"
"Source" = "https://github.com/lllyasviel/Fooocus"

[project.scripts]
fooocus = "launch:main"

[tool.uv]
[[tool.uv.index]]
name = "pytorch-nightly"
url = "https://download.pytorch.org/whl/nightly/cu128"

[tool.uv.sources]
torch = {index = "pytorch-nightly"}
torchvision = {index = "pytorch-nightly"}
torchaudio = {index = "pytorch-nightly"}

[tool.setuptools]
packages = ["modules", "ldm_patched", "extras"]
include-package-data = true

[tool.setuptools.package-data]
"*" = ["*.json", "*.yaml", "*.txt", "*.csv", "*.mp3", "*.jpg", "*.png"]